# Mercury

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
lib/: mercury.hpp
tests/: CMakeLists.txt  catch_amalgamated.cpp  catch_amalgamated.hpp  test_coroutines.cpp  test_signal.cpp  test_stress.cpp  test_taskcontroller.cpp  test_threadpool.cpp
